.provarCaches/00D410000011HE0EAM/objects/rstk__icsimreq__c.object
<CustomObject>
    <description>icsimreq__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT(rstk__icsimreq_simseq__c) &amp; rstk__icsimreq_supreq__r.rstk__supreq_ordno__c &amp; TEXT( rstk__icsimreq_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>&apos; (&apos; + rstk__icsimreq_supreq__r.rstk__supreq_ordno__c + &apos;) &apos; + TEXT( rstk__icsimreq_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icsimreq_adjqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Adjustment Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icsimreq_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icsimreq_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Simulated Requisition Adjustments</relationshipLabel>
        <relationshipName>icsimreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsimreq_simseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Simulation Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icsimreq_simuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Simulation User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Simulated Requisition Adjustments</relationshipLabel>
        <relationshipName>icsimreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icsimreq_supreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier Requisition</label>
        <referenceTo>rstk__supreq__c</referenceTo>
        <relationshipLabel>Simulated Requisition Adjustments</relationshipLabel>
        <relationshipName>icsimreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Simulated Requisition Adjustment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simulated Requisition Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>